# my_idea

./: .gitignore  ABLATION_REPORT.md  README.md  design_v2-2(MOE融合模块改进).md  pyproject.toml  st_imputation_baseline_survey.md  命令.txt
baselines/: README.md  eval_statistical.py  train_deep.py  train_saits_pypots.py
changes/: 20260610_102748_第1次改动_MOE融合模块改进.md  20260610_120946_第2次改动_Shared残差路由.md  20260611_215045_第3次改动_尺度门控可靠性.md  20260612_121828_第4次改动_自适应分支门控.md  20260613_225530_第5次改动_Full专属互补训练.md
configs/: ablation_branch_gate_balanced.json  ablation_branch_gate_shared_bias.json  ablation_branch_residual.json  ablation_fine_only.json  ablation_fixed_scale_experts.json  ablation_no_cross_scale.json  ablation_no_router.json  ablation_no_router_dense.json  ablation_no_router_topk.json  ablation_routed_only.json  ablation_shared_clean.json  ablation_shared_input_hybrid.json  ablation_shared_input_post.json  ablation_shared_only.json  ablation_shared_plus_routed_residual.json  bikenyc.json  default.json  smoke.json  taxibj.json
experments_report/: 20260610_102748_第1次修改_实验分析报告.md  20260611_第2次修改_实验分析报告.md  20260612_第3次改动_实验分析报告.md  20260612_第4次改动_实验分析报告.md  20260613_第4次改动_回滚后实验分析报告.md  20260614_第5次改动_修复验证实验分析报告.md  20260617_BikeNYC_跨缺失率跨掩码模式分析报告.md  20260618_第5次改动_双数据集完整消融分析报告.md  20260623_第5次改动_三个数据集完整消融实验报告.md  20260623_第5次改动_三数据集模型效果综合分析.md  20260623_第5次改动_完整跑完两个数据集消融实验.md
imputation_benchmark/: GRID_DATASET_GUIDE.md  generate_smoke_configs.py  prepare_grid_dataset.py
model_designs/: design_1.md  design_2_1.md  design_2_3.md  design_2_4.md  design_v2-5.md  (+1 more)
(+148 files in other folders)
